--- a/org.app.name.yml
+++ b/org.app.name.yml
@@ -40,9 +40,9 @@ modules:
           type: electron-updater
 
       - type: script
-        dest-filename: TMPL_APP_NAME
+        dest-filename: SocNetV
         commands:
-          - exec zypak-wrapper /app/extra/bin/launcher --no-sandbox "$0"
+          - exec /app/extra/bin/AppRun "$0"
 
       - type: file
         path: TMPL_APP_ID.appdata.xml
