--- a/org.app.name.yml
+++ b/org.app.name.yml
@@ -30,7 +30,7 @@ modules:
     buildsystem: simple
     build-commands:
       - unappimage ./App.AppImage
-      - mv squashfs-root AppImage
+      - mv squashfs-root bundle
 
       - mkdir -p /app/share/icons/hicolor/512x512/apps
       - mkdir -p /app/share/applications
@@ -39,10 +39,10 @@ modules:
       - install -Dm644 TMPL_APP_ID.appdata.xml "${FLATPAK_DEST}/share/metainfo/${FLATPAK_ID}.appdata.xml"
       - install -Dm644 -t ${FLATPAK_DEST}/share/icons/hicolor/512x512/apps TMPL_APP_NAME.png
 
-      - mv AppImage /app/
+      - mv bundle /app/
       - install -Dm755 TMPL_APP_NAME "${FLATPAK_DEST}/bin/"
     cleanup:
-      - AppImage
+      - bundle
 
     sources:
       - type: file
